@@ -1,7 +1,9 @@
 2008-07-10  Sam Steingold  <sds@gnu.org>
 
-	* debug.d (read_form): fix a GC-safety bug (save function before
-	subsstring)
+	* debug.d (read_form): fix a GC-safety bug
+	 (save function before subsstring)
+	* foreign.d (check_faddress_valid): fix a GC-safety bug
+	 (check_fpointer can trigger GC!)
 
 2008-07-10  Sam Steingold  <sds@gnu.org>
 
